fix:change in infra midldewares...

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -9,7 +9,7 @@
 <body>
     <h1>esto es una prueba</h1>
     <ul>
-        <li><a href="/api/user/auth/spotify">login</a></li>
+        <li><a href="/api/auth/login/spotify">login</a></li>
         <li><a href="/api/home">home</a></li>
     </ul>
 </body>
